--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,25 @@
 {
     "name": "php-tmdb/laravel",
-    "description": "Laravel Package for TMDB ( The Movie Database ) API. Provides easy access to the wtfzdotnet/php-tmdb-api library.",
+    "description": "Laravel 7.x Package for TMDB ( The Movie Database ) API. Provides easy access to the wtfzdotnet/php-tmdb-api library.",
     "keywords": ["Laravel", "tmdb", "api", "php", "wrapper", "movie", "tv", "tv show", "tvdb"],
     "authors": [
         {
-            "name": "Mark Redeman",
-            "email": "markredeman@gmail.com"
+            "name": "Patrick Simard",
+            "email": "patrick.simard@webrussell.com"
         }
     ],
     "license": "MIT",
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "~5.0 || ~4.0",
+        "illuminate/support": "^7.9.2",
         "php-tmdb/api": "~2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.5",
-        "symfony/event-dispatcher": "~2.8|~3.0",
-        "illuminate/events": "~5.0",
-        "doctrine/cache": ">=1.3.0",
-        "monolog/monolog": ">=1.7.0"
+        "phpunit/phpunit": "^7",
+        "symfony/event-dispatcher": "^5.0.8",
+        "illuminate/events": "^7.9.2",
+        "doctrine/cache": "^1.10.0",
+        "monolog/monolog": "^2.0.2"
     },
     "suggest": {
         "doctrine/cache": "Required if you want to make use of caching features.",
